update upload model process
